--- a/package.json
+++ b/package.json
@@ -275,6 +275,8 @@
     "gulp-autoprefixer": "^10.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-cli": "^3.1.0",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^7.1.0",
     "gulp-rename": "^2.1.0",
     "gulp-sass": "^6.0.1",
     "sass": "^1.93.2"
